# calabiyau-server-node-switcher

./: .gitignore  Calabiyau-server-node-switcher.spec  CalabiyauServerNodeSwitcher.sln  MIGRATION_LOG.md  QUALITY_IMPROVEMENTS.md  README.md  StrinovaNodeSwitcher.sln  WEBUI_REDESIGN.md  api_server.py  calabiyau_server_node_switcher.spec  change_hosts.py  dns_servers.py  domain_view.py  domain_view_model.py  get_dns.py  get_route_table.py  main mon.py  main.py  main_view.py  manual_ip_view.py  manual_ip_view_model.py  ping_view.py  ping_widget.py  pyproject.toml  query_ping.py  query_servers.py  requirements.txt  routing_model.py  select_recent_stats.sql  server_list global.json  server_list.json  server_view.py  server_view_model.py  test.py  timeseries_db.py
CalabiyauServerNodeSwitcher/: App.xaml  App.xaml.cs  CalabiyauServerNodeSwitcher.csproj
CalabiyauServerNodeSwitcher/Models/: Ping.cs  ServerInfo.cs
CalabiyauServerNodeSwitcher/Services/: ChangeHosts.cs  GetUDPPingTime.cs  HostsManager.cs
CalabiyauServerNodeSwitcher/ViewModels/: ServerListViewModel.cs
CalabiyauServerNodeSwitcher/Views/: MainWindow.xaml  MainWindow.xaml.cs
Core/HostsManager/: Host.cs  HostsFileHandler.cs  HostsParser.cs
Core/LatencyChecker/: Latency.cs  (+1 more)
Node/: Beijing.txt  Chengdu.txt  Guangzhou.txt  Hong Kong.txt
WpfApp/: App.xaml  App.xaml.cs
app/: __init__.py  config.py  logging_config.py  main.py
calabiyau_server_node_switcher/: import_path.py  main.py
dns_query/: query_servers.py
latency_crawler/: query_ping.py
webui/: package-lock.json  package.json  tailwind.config.js
(+93 files in other folders)
